feat: small audio sound

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe id="player" src="https://youtube.com/embed/smHRooxKzB8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <iframe id="player" src="https://youtube.com/embed/smHRooxKzB8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+             <div id="player1"></div>
           </div>
         <h2 class="title is-6">
           Method1: Original chroma
@@ -209,7 +210,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/sGNe0CEadhM?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/sGNe0CEadhM?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player2"></div>
           </div>
         <h2 class="title is-6">
           Method2: CENS (NIPS'21)
@@ -219,7 +221,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/JKVKplyH-jA?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/JKVKplyH-jA?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player3"></div>
           </div>
         <h2 class="title is-6">
           Method3: H-CENS (Ours)
@@ -229,7 +232,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/IXNLS-AJ904" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/IXNLS-AJ904" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player4"></div>
           </div>
         <h2 class="title is-6">
           Method4: H-CENS+MA (Ours)
@@ -253,7 +257,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/IcPqGVEfU1g?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/IcPqGVEfU1g?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+             <div id="player5"></div>
           </div>
         <h2 class="title is-6">
           Method1: Original chroma
@@ -263,7 +268,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/CyWZHx_CJ7E?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/CyWZHx_CJ7E?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player6"></div>
           </div>
         <h2 class="title is-6">
           Method2: CENS (NIPS'21)
@@ -273,7 +279,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/CONWLIFqSZk?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/CONWLIFqSZk?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player7"></div>
           </div>
         <h2 class="title is-6">
           Method3: H-CENS (Ours)
@@ -283,7 +290,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/JcBfu5iIONA?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/JcBfu5iIONA?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player8"></div>
           </div>
         <h2 class="title is-6">
           Method4: H-CENS+MA (Ours)
@@ -310,8 +318,9 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe id="player" src="https://youtube.com/embed/pSNvCHTayEw?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
+            <!-- <iframe id="player" src="https://youtube.com/embed/pSNvCHTayEw?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+             <div id="player9"></div>
+        </div>
         <h2 class="title is-6">
           Method1: Original chroma
         </h2>
@@ -320,7 +329,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/7_R3mZjqGj4?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/7_R3mZjqGj4?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player10"></div>
           </div>
         <h2 class="title is-6">
           Method2: CENS (NIPS'21)
@@ -330,7 +340,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/-7hmERwuUkI?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/-7hmERwuUkI?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player11"></div>
           </div>
         <h2 class="title is-6">
           Method3: H-CENS (k=0) (Ours)
@@ -340,7 +351,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/ZAXFPdmhFD0?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/ZAXFPdmhFD0?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player12"></div>
           </div>
         <h2 class="title is-6">
           Method4: H-CENS (k=5) (Ours)
@@ -363,7 +375,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/gqwtSjOvCo0?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/gqwtSjOvCo0?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+             <div id="player13"></div>
           </div>
         <h2 class="title is-6">
           Method1: Original chroma
@@ -373,7 +386,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/JprRPPyNCRo?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/JprRPPyNCRo?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player14"></div>
           </div>
         <h2 class="title is-6">
           Method2: CENS (NIPS'21)
@@ -383,7 +397,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/I--O8RoK3zo?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/I--O8RoK3zo?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player15"></div>
           </div>
         <h2 class="title is-6">
           Method3: H-CENS (k=0) (Ours)
@@ -393,7 +408,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/498mYT13sqg?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/498mYT13sqg?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player16"></div>
           </div>
         <h2 class="title is-6">
           Method4: H-CENS (k=5) (Ours)
@@ -419,7 +435,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/jNosuU46uk8?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/jNosuU46uk8?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+             <div id="player17"></div>
           </div>
         <h2 class="title is-6">
           Method1: Original chroma
@@ -429,7 +446,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/4BdbDDjr58k?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/4BdbDDjr58k?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player18"></div>
           </div>
         <h2 class="title is-6">
           Method2: CENS (NIPS'21)
@@ -439,7 +457,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/uUjsC1w5DlY?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/uUjsC1w5DlY?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player19"></div>
           </div>
         <h2 class="title is-6">
           Method3: H-CENS (k=0) (Ours)
@@ -449,7 +468,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/Eh2f2VcwNYI?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/Eh2f2VcwNYI?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player20"></div>
           </div>
         <h2 class="title is-6">
           Method4: H-CENS (k=5) (Ours)
@@ -472,7 +492,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/Vpyg7DKC2hs?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/Vpyg7DKC2hs?feature=share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+             <div id="player21"></div>
           </div>
         <h2 class="title is-6">
           Method1: Original chroma
@@ -482,7 +503,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/5Q_3oBOXNQw?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/5Q_3oBOXNQw?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player22"></div>
           </div>
         <h2 class="title is-6">
           Method2: CENS (NIPS'21)
@@ -492,7 +514,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/bBtECT2EjPI?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/bBtECT2EjPI?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player23"></div>
           </div>
         <h2 class="title is-6">
           Method3: H-CENS (k=0) (Ours)
@@ -502,7 +525,8 @@ In our experiments, we demonstrate that our music-reactive generation model perf
         <!-- Your image here -->
         <div class="publication-video">
             <!-- Youtube embed code here -->
-            <iframe src="https://youtube.com/embed/vKNBF9AQGME?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://youtube.com/embed/vKNBF9AQGME?feature=share" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+             <div id="player24"></div>
           </div>
         <h2 class="title is-6">
           Method4: H-CENS (k=5) (Ours)
@@ -628,23 +652,57 @@ In our experiments, we demonstrate that our music-reactive generation model perf
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
     console.log('hello')
 
-    var player;
+    var players = [];
+    var youtube_id_list = [
+      "smHRooxKzB8",
+      "sGNe0CEadhM",
+      "JKVKplyH",
+      "IXNLS-AJ904",
+      "IcPqGVEfU1g",
+      "CyWZHx_CJ7E",
+      "CONWLIFqSZk",
+      "JcBfu5iIONA",
+      "pSNvCHTayEw",
+      "7_R3mZjqGj4",
+      "-7hmERwuUkI",
+      "ZAXFPdmhFD0",
+      "gqwtSjOvCo0",
+      "JprRPPyNCRo",
+      "I--O8RoK3zo",
+      "498mYT13sqg",
+      "jNosuU46uk8",
+      "4BdbDDjr58k",
+      "uUjsC1w5DlY",
+      "Eh2f2VcwNYI",
+      "Vpyg7DKC2hs",
+      "5Q_3oBOXNQw",
+      "bBtECT2EjPI?",
+      "vKNBF9AQGME",
+    ];
+
+    function setVolumeForAllPlayers(volume) {
+      for (let i = 0; i < 24; i++) {
+          if (players[i] && typeof players[i].setVolume === 'function') {
+              players[i].setVolume(volume);
+          }
+      }
+    }
+
     function onYouTubeIframeAPIReady() {
-      console.log('hello2')
-      player = new YT.Player('player', {
-        events: {
-          'onReady': onPlayerReady,
-        }
-      });
+      for (let i = 0; i < 24; i++) {
+          players[i] = new YT.Player('player' + (i+1), {
+              height: '360',
+              width: '640',
+              videoId: youtube_id_list[i], // Replace with your video ID
+              events: {
+                  'onReady': onPlayerReady
+              }
+          });
+      }
     }
 
     function onPlayerReady(event) {
-      console.log('hello3')
-      var embedCode = event.target.getVideoEmbedCode();
-      event.target.playVideo();
-      if (document.getElementById('embed-code')) {
-        document.getElementById('embed-code').innerHTML = embedCode;
-      }
+      setVolumeForAllPlayers(10)
     }
   </script>
   </body>
